<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.MainActivity"
    android:padding="@dimen/large_padding_size">

    <ImageView
        android:id="@+id/ivCoverArt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/unknown"
        android:contentDescription="@string/cover_art_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toBottomOf="@id/ivCoverArt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvArtistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintTop_toBottomOf="@id/tvSongTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tvPlayCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/small_text_size"
        android:layout_marginVertical="@dimen/small_margin_size"
        tools:text="# plays"
        app:layout_constraintTop_toBottomOf="@id/tvArtistName"
        app:layout_constraintBottom_toTopOf="@id/ibPlayButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/ibPreviousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_previous"
        android:contentDescription="@string/previous_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="@id/tvPlayCount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ibPlayButton"/>

    <ImageButton
        android:id="@+id/ibPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_play"
        android:contentDescription="@string/play_button"
        app:layout_constraintTop_toTopOf="@id/tvPlayCount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ibPreviousButton"
        app:layout_constraintRight_toLeftOf="@id/ibNextButton"/>

    <ImageButton
        android:id="@+id/ibNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_next"
        android:contentDescription="@string/next_button"
        app:layout_constraintTop_toTopOf="@id/tvPlayCount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ibPlayButton"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
